# product_development_crewai

./: Dockerfile  README.md  pyproject.toml
src/product_development/: crew.py  main.py
src/product_development/agents/: oneliner.py
src/product_development/config/: agents.yaml  tasks.yaml
